--- a/Stream2.html
+++ b/Stream2.html
@@ -7,7 +7,7 @@
         
          <nav>
             <ul>
-                <li><a href="Stream1.html">Stream One</a></li>
+                <li><a href="index.html">Stream One</a></li>
                 <li><a href="Stream2.html">Stream Two</a></li>
                 <li><a href="Stream3.html">Stream Three</a></li>
             </ul>
