--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
          <nav>
             <ul>
-                <li><a href="Stream1.html">Stream One</a></li>
+                <li><a href="index.html">Stream One</a></li>
                 <li><a href="Stream2.html">Stream Two</a></li>
                 <li><a href="Stream3.html">Stream Three</a></li>
             </ul>
